myteo/test/analyze/type_check/main_function/invalid_return_type.exp
Error: Invalid type for main function. The main function optionally takes a single parameter of type `Vec<String>`, and must return either an `Int` or `Unit`.
test/analyze/type_check/main_function/invalid_return_type.myte:3:4-8
 3 | fun main(): Bool {
   |     ^^^^