myteo/test/analyze/type_check/main_function/invalid_return_type.myte
module test

fun main(): Bool {
  return true;
}